force-app/main/default/objects/Geo_Location__c/fields/AP_FS_LTP_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>AP_FS_LTP_Territory_Code__c</fullName>
    <description>AP/FS/LTP Territory Codes to be used for commissions on the Territory Revenue records</description>
    <inlineHelpText>AP/FS/LTP Territory Codes to be used for commissions on the Territory Revenue records</inlineHelpText>
    <label>AP/FS/LTP Territory Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>