force-app/main/default/objects/Geo_Location__c/fields/AQ_Territory__c.field-meta.xml
<CustomField>
    <fullName>AQ_Territory__c</fullName>
    <description>Aquatics Territory used for commissions on the Territory Revenue records</description>
    <inlineHelpText>Aquatics Territory used for commissions on the Territory Revenue records</inlineHelpText>
    <label>AQ Territory</label>
    <length>6</length>
    <type>Text</type>
</CustomField>