force-app/main/default/objects/Geo_Location__c/fields/Aquatics_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Aquatics_Territory_Code__c</fullName>
    <description>Aquatics Territory Codes to be used for commissions on the Territory Revenue records</description>
    <inlineHelpText>Aquatics Territory Codes to be used for commissions on the Territory Revenue records</inlineHelpText>
    <label>Aquatics Territory Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>