force-app/main/default/objects/Geo_Location__c/fields/City_UC__c.field-meta.xml
<CustomField>
    <fullName>City_UC__c</fullName>
    <formula>UPPER(City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City UC</label>
    <type>Text</type>
</CustomField>