force-app/main/default/objects/Geo_Location__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>Coordinates</label>
    <required>true</required>
    <scale>4</scale>
    <type>Location</type>
</CustomField>