force-app/main/default/objects/Geo_Location__c/fields/GL_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Unit_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Unit Code</label>
    <referenceTo>GL_Unit_Code__c</referenceTo>
    <relationshipLabel>Geo Locations</relationshipLabel>
    <relationshipName>Geo_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>