force-app/main/default/objects/Geo_Location__c/fields/Land_Territory__c.field-meta.xml
<CustomField>
    <fullName>Land_Territory__c</fullName>
    <description>Land Territory used for commissions on the Territory Revenue records</description>
    <inlineHelpText>Land Territory used for commissions on the Territory Revenue records</inlineHelpText>
    <label>Land Territory</label>
    <length>6</length>
    <type>Text</type>
</CustomField>