force-app/main/default/objects/Geo_Location__c/fields/State_UC__c.field-meta.xml
<CustomField>
    <fullName>State_UC__c</fullName>
    <formula>UPPER(State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State UC</label>
    <type>Text</type>
</CustomField>