force-app/main/default/objects/Geo_Location__c/fields/TS_Loc__c.field-meta.xml
<CustomField>
    <fullName>TS_Loc__c</fullName>
    <formula>GL_Unit_Code__r.TS_LOC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TS Loc</label>
    <type>Text</type>
</CustomField>